crates/rstest-bdd/tests/fixtures_macros/scenario_missing_file.stderr
error: feature file not found: $WORKSPACE/target/tests/trybuild/rstest-bdd/tests/features/does_not_exist.feature
 --> tests/fixtures_macros/scenario_missing_file.rs:3:1
  |
3 | #[scenario(path = "tests/features/does_not_exist.feature")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `scenario` (in Nightly builds, run with -Z macro-backtrace for more info)
